Naive parser-generic version
Some holes in this parser. Putting this on hold as it so far is about
15x slower than the bytestring-only version

--- a/TODO.org
+++ b/TODO.org
@@ -25,3 +25,4 @@
 * TODO quickcheck suite for testing parse . serialize == id
 * TODO source code cleanup
   want to use Soostone's coding standards
+* TODO bench against network-uri
